<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Quiz App"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question_1"
                style="@style/Question"
                android:text="@string/question_1"
                />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ridingloop"
                android:id="@+id/q1_a1"
                />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/manufacturing"
                android:id="@+id/q1_a2"
                />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/optimizedboxpallet2"
                android:id="@+id/q1_a3"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Question"
                android:text="@string/question_2"
                android:id="@+id/question_2"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/q2_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_ans_1"
                    />

                <RadioButton
                    android:id="@id/q2_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_ans_2"
                    />
                <RadioButton
                    android:id="@id/q2_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_ans_3"
                    android:onClick="checkQuestion2"
                    />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question_3"
                style="@style/Question"
                android:text="@string/question_3"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Question"
                android:text="@string/question_4"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_ans_1"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_ans_2"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_ans_3"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question_5"
                style="@style/Question"
                android:text="@string/question_5"/>

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/question_5a"
                android:layout_height="wrap_content"
                android:inputType="text"/>


        </LinearLayout>

        <Button
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:text="@string/submit"
            android:onClick="calculateScore" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/results"
            android:visibility="invisible"/>

    </LinearLayout>



</ScrollView>